# opengov

./: .gitignore  AGENTS.md  CODE_CLEANUP_ANALYSIS.md  CODE_CLEANUP_IMPLEMENTATION_GUIDE.md  CODE_CLEANUP_QUICK_REFERENCE.md  CODE_CLEANUP_README.md  DOCKER.md  Makefile  README.md  TODO.md  docker-compose.yml
backend/: .air.toml  .env.example  AGENTS.md  Dockerfile  Makefile  alembic.ini  go.mod  go.sum  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  exceptions.py  main.py
backend/app/models/: __init__.py  agency.py  article.py  bookmark.py  federal_register.py  frarticle.py  like.py  scraper_run.py  user.py
backend/app/routers/: admin.py  auth.py  auth_oauth_legacy.py  bookmarks.py  common.py  feed.py  likes.py  oauth.py
backend/app/schemas/: __init__.py  article.py  bookmark.py  feed.py  like.py  scraper_run.py  user.py
backend/app/services/: auth.py  auth_oauth_legacy.py  auth_service.py  auth_service_legacy.py  bookmark.py  federal_register.py  google_oauth.py  grok.py  grok_mock.py  like.py
backend/app/workers/: scraper.py
backend/cmd/api/: main.go  route.go  wiring.go
backend/cmd/jobs/: main.go
backend/cmd/scraper/: main.go
backend/cmd/server/: main.go
backend/internal/client/: federal_register_client.go
backend/internal/config/: config.go  config_test.go
backend/internal/constants/: source_type.go
backend/internal/db/: db.go  migrations.go
backend/internal/domain/: domain.go
backend/internal/handlers/: admin.go  admin_api.go  auth.go  bookmark.go  feed.go  like.go  oauth.go  types.go
backend/internal/middleware/: auth.go
backend/internal/models/: models.go
backend/internal/repository/: agency.go  agency_repository.go  article.go  bookmark.go  bookmark_repository.go  federal_register_document.go  feed.go  feed_repository.go  like.go  like_repository.go  poldoc_repository.go  (+5 more)
backend/migration/: 000_create_users.sql  001_create_agencies.sql  002_create_feed_entries.sql  002_create_policy_documents.sql  003_create_feed_entries.sql  003_create_policy_documents.sql  004_create_bookmarks.sql  005_create_likes.sql  006_create_policy_document_sources.sql  006_create_raw_policy_documents.sql  007_policy_documents_source_key_external_id.sql  008_raw_policy_documents_nullable_policy_document_id.sql  AGENTS.md  migration.go
backend/migrations/: env.py
backend/scripts/: build-api.sh  build-scraper.sh  db.sh  populate_test_data.py  run-api.sh  run-scraper.sh
backend/tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_bookmarks.py  test_feed.py  test_google_oauth.py  test_health.py  test_likes.py  test_scraper_monitoring.py
(+125 files in other folders)
