[project]
name = "opengov"
version = "0.1.0"
description = "A viral news app for Federal Register updates"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "httpx==0.25.2",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.0",
    "slowapi==0.1.9",
    "tenacity==8.2.3",
    "ruff==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
