[project]
name = "opengov"
version = "0.1.0"
description = "A viral news app for Federal Register updates"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "httpx==0.25.2",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.0",
    "slowapi==0.1.9",
    "tenacity==8.2.3",
    "ruff==0.1.9",
    "authlib==1.3.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pydantic-settings==2.1.0",
    "cachetools==5.3.2",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
