[project]
name = "opengov"
version = "0.1.0"
description = "A viral news app for Federal Register updates"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "httpx==0.25.2",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.0",
    "slowapi==0.1.9",
    "tenacity==8.2.3",
    "ruff==0.1.9",
    "python-multipart==0.0.6",
    "pydantic-settings==2.1.0",
    "cachetools==5.3.2",
    "fastapi-users[sqlalchemy]>=12.1.2",
    "passlib[bcrypt]>=1.7.4",
    "setuptools>=80.9.0",
    "aiosqlite>=0.21.0",
    "bcrypt>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
